Name:          Q3Demo
Version:       0.0.1
Cabal-Version: >= 1.2
Synopsis:      First Person Shooter Demo
Category:      Graphics, Game
Description:   First Person Shooter Demo
Author:        Csaba Hruska
Maintainer:    csaba (dot) hruska (at) gmail (dot) com
Copyright:     (c) 2011, Csaba Hruska
License:       BSD3
License-File:  LICENSE
Stability:     experimental
Build-Type:    Simple

Extra-Source-Files:
    Q3Demo/Data/Items.hs
    Q3Demo/Data/Material.hs
    Q3Demo/Graphics/Q3Patch.hs
    Q3Demo/Loader/BSP.hs
    Q3Demo/Loader/MD3.hs
    Q3Demo/Loader/ShaderParser.hs

Executable q3demo
  HS-Source-Dirs: src
  Main-IS:        Main.hs
  Build-Depends:  base >= 4 && < 5, containers,
                  binary, bytestring, bytestring-trie, data-binary-ieee754, vect, vector,
                  OpenGLRaw, SDL, SDL-mixer, bitmap, stb-image >= 0.2

  GHC-Options:    -O2 -Wall -fforce-recomp -fno-warn-unused-do-bind -fno-warn-name-shadowing
